--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyB-PaPlpAJQv6JWH01zC1UrSz4aY-ajGD0" />
         <receiver android:name=".MainView$LocationReceiver"/>
+        <service android:name=".NetService"></service>
     </application>
 
 </manifest>
